--- a/server/Web/JokesWebApi.Web/appsettings.json
+++ b/server/Web/JokesWebApi.Web/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JwtSettings": {
+    "Secret": "kjcvxkcjvnosifjsldkjvclskmxcvspdicmsl"
+  },
   "AllowedHosts": "*"
 }
