--- a/expenses.frontend/package.json
+++ b/expenses.frontend/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
