--- a/expenses.backend/Expenses.Core/Expenses.Core.csproj
+++ b/expenses.backend/Expenses.Core/Expenses.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\expenses.db\Expenses.DB.csproj" />
   </ItemGroup>
 
